feat: 폼리스트 조회